# java-env-manager

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  cli.yaml  rustfmt.toml
.gitlab/issue_templates/: Bug.md  Feature Request.md
.gitlab/merge_request_templates/: Default.md
java-env-manager-cli/: Cargo.toml  cli.yaml
java-env-manager-cli/src/: main.rs
java-env-manager-gui/: Cargo.toml
java-env-manager-gui/src/: main.rs
libjem/: Cargo.toml
libjem/src/: add.rs  doctor.rs  error.rs  init.rs  lib.rs  list.rs  remove.rs  set.rs  settings.rs  update.rs  version.rs  which.rs
libjem/src/tests/: init.rs  mod.rs  settings.rs
src/: main.rs
