[package]
name = "java-env-manager-gui"
version = "0.1.0"
authors = ["Tristan Partin <tristan.partin@gmail.com>"]
description = "The Java Environment Manager GUI is a tool for managing multiple Java distributions on a system."
license = "Apache-2.0"
repository = "https:gitlab.com/tristan957/java-env-manager"

[dependencies]
gtk = "0.4"
libjem = {path = "../libjem"}
